--- a/documentation/documents/identitymap/index.html
+++ b/documentation/documents/identitymap/index.html
@@ -111,8 +111,7 @@
         } 
 </code></pre>
 <p>Do note that using the identity map functionality can be wasteful if you aren't able to take advantage of the identity map caching in a session. In those cases, you may want to either use the <code>IDocumentStore.LightweightSession()</code> which forgos the identity map functionality, or use the read only <code>IQuerySession</code> alternative. RavenDb users will note that Marten does not (yet) support any notion of <code>Evict()</code> to manually remove documents from identity map tracking to avoid memory usage problems. Our hope is that the existence of the lightweight session and the read only interface will alleviate the memory explosion problems that you can run into with naive usage of identity maps or the dirty checking when fetching a large number of documents.</p>
-<p><strong>As of right now, Marten is only applying the Identity Map functionality to documents loaded by Id and misses documents fetched from <code>Query&lt;T&gt;</code> methods.
-This <a href="https://github.com/JasperFx/Marten/issues/88">will be addressed soon</a>.</strong></p>
+<p>As of Marten v0.7, the Identity Map functionality is applied to all documents loaded by Id or Linq queries with <code>IQuerySession/IDocumentSession.Query&lt;T&gt;()</code>. <strong>Documents loaded by user-supplied SQL in the <code>IQuerySession.Query&lt;T&gt;(sql)</code> mechanism bypass the Identity Map functionality.</strong></p>
 
 
 			      	</div>
