--- a/documentation/documents/index.html
+++ b/documentation/documents/index.html
@@ -118,7 +118,7 @@ Marten will build new database tables and functions for each new document type a
 
                 // We&#39;re getting ahead of ourselves, but this
                 // opts into Postgresql 9.5 style upserts
-                _.Schema.UpsertType = PostgresUpsertType.Standard;
+                _.UpsertType = PostgresUpsertType.Standard;
             });
 </code></pre>
 <p>For more information on using the <code>IDocumentStore</code> and configuring document storage, see:</p>
