--- a/documentation/documents/index.html
+++ b/documentation/documents/index.html
@@ -43,7 +43,7 @@
 		        <li>
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
-		      	<li><a href="/marten/documentation" title="Documentation">Previous</a></li>
+		      	<li><a href="/marten/documentation/schema" title="Marten and the Postgresql Schema">Previous</a></li>
 		      	<li><a href="/marten/documentation/documents/document_ids" title="Document Id's">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
@@ -69,7 +69,7 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.7.1</h3>
+		      	<h3>Marten 0.8.0</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
@@ -77,7 +77,7 @@
 		        </ul>
 
 		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/document_ids">Document Id's</a></p>
-		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation">Documentation</a></p>
+		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/schema">Marten and the Postgresql Schema</a></p>
 
 		        </ul>
 		      </div><!--/left-->
@@ -108,7 +108,7 @@ Marten will build new database tables and functions for each new document type a
             var store = DocumentStore.For(_ =&gt;
             {
                 // Turn this off in production 
-                _.AutoCreateSchemaObjects = false;
+                _.AutoCreateSchemaObjects = AutoCreate.None;
 
                 // This is still mandatory
                 _.Connection(&quot;some connection string&quot;);
@@ -127,7 +127,7 @@ Marten will build new database tables and functions for each new document type a
 <li><a href="/marten/documentation/documents/json">Json Serialization</a></li>
 <li><a href="/marten/documentation/documents/bulk_insert">Bulk Insert</a></li>
 <li><a href="/marten/documentation/documents/versioning">Versioned Documents</a></li>
-<li><a href="/marten/documentation/documents/diagnostics">Diagnostics</a></li>
+<li><a href="/marten/documentation/documents/diagnostics">Diagnostics and Instrumentation</a></li>
 <li><a href="/marten/documentation/documents/text_search">Full Text Searching</a></li>
 <li><a href="/marten/documentation/documents/cleaning">Tearing Down Document Storage</a></li>
 <li><a href="/marten/documentation/documents/hierarchies">Document Hierarchies</a></li>
@@ -197,7 +197,7 @@ in one of three ways:</p>
 
 			      	<nav>
 				        <span>
-				        	<strong>Previous: </strong><a href="/marten/documentation">Documentation</a>
+				        	<strong>Previous: </strong><a href="/marten/documentation/schema">Marten and the Postgresql Schema</a>
 
 				        </span>
 				        <span class="pull-right">
