--- a/documentation/documents/versioning/index.html
+++ b/documentation/documents/versioning/index.html
@@ -44,7 +44,7 @@
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
 		      	<li><a href="/marten/documentation/documents/batched_queries" title="Batched Queries">Previous</a></li>
-		      	<li><a href="/marten/documentation/documents/diagnostics" title="Diagnostics">Next</a></li>
+		      	<li><a href="/marten/documentation/documents/diagnostics" title="Diagnostics and Instrumentation">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -69,14 +69,14 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.7.1</h3>
+		      	<h3>Marten 0.8.0</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/diagnostics">Diagnostics</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/diagnostics">Diagnostics and Instrumentation</a></p>
 		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/documents/batched_queries">Batched Queries</a></p>
 
 		        </ul>
@@ -105,7 +105,7 @@
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/documents/diagnostics">Diagnostics</a>
+				        	<strong>Next: </strong><a href="/marten/documentation/documents/diagnostics">Diagnostics and Instrumentation</a>
 
 				        </span>
 			      	</nav>
