--- a/documentation/index.html
+++ b/documentation/index.html
@@ -44,7 +44,7 @@
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
 		      	<li><a href="/marten/getting_started" title="Getting Started">Previous</a></li>
-		      	<li><a href="/marten/documentation/documents" title="Marten as Document Db">Next</a></li>
+		      	<li><a href="/marten/documentation/schema" title="Marten and the Postgresql Schema">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -69,14 +69,14 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.7.1</h3>
+		      	<h3>Marten 0.8.0</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents">Marten as Document Db</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/schema">Marten and the Postgresql Schema</a></p>
 		        	<h3 class="no-margin">Previous</h3><a href="/marten/getting_started">Getting Started</a></p>
 
 		        </ul>
@@ -91,7 +91,7 @@
 			      	<div id="main-pane">
 			      		<!--Title:Documentation-->
 <!--Url:documentation-->
-<ul class="table-of-contents"><li><a href="/marten/documentation/documents">Marten as Document Db</a><ul><li><a href="/marten/documentation/documents/document_ids">Document Id&#39;s</a></li><li><a href="/marten/documentation/documents/json">Json Serialization</a></li><li><a href="/marten/documentation/documents/linq">Querying Documents with Linq</a></li><li><a href="/marten/documentation/documents/sql">Querying Documents with Postgresql SQL</a></li><li><a href="/marten/documentation/documents/saved_queries">Compiled Queries</a></li><li><a href="/marten/documentation/documents/persisting">Persisting Documents and Unit Of Work</a></li><li><a href="/marten/documentation/documents/partial_updates">Partial Document Updates</a></li><li><a href="/marten/documentation/documents/bulk_insert">Bulk Insert</a></li><li><a href="/marten/documentation/documents/identitymap">Identity Map Mechanics</a></li><li><a href="/marten/documentation/documents/loading">Loading Documents by Id</a></li><li><a href="/marten/documentation/documents/deleting">Deleting Documents</a></li><li><a href="/marten/documentation/documents/async">Asynchronous Operations</a></li><li><a href="/marten/documentation/documents/query_json">Query for Raw JSON</a></li><li><a href="/marten/documentation/documents/batched_queries">Batched Queries</a></li><li><a href="/marten/documentation/documents/versioning">Versioned Documents</a></li><li><a href="/marten/documentation/documents/diagnostics">Diagnostics</a></li><li><a href="/marten/documentation/documents/customizing">Customizing Document Storage and Querying</a></li><li><a href="/marten/documentation/documents/text_search">Full Text Searching</a></li><li><a href="/marten/documentation/documents/cleaning">Tearing Down Document Storage</a></li><li><a href="/marten/documentation/documents/hierarchies">Document Hierarchies</a></li><li><a href="/marten/documentation/documents/projections">Document Projections</a></li><li><a href="/marten/documentation/documents/request-throttling">Request Counting and Throttling</a></li><li><a href="/marten/documentation/documents/table_storage">Table Storage</a></li></ul></li><li><a href="/marten/documentation/events">Marten as Event Store</a><ul><li><a href="/marten/documentation/events/configuration">Configuring Streams</a></li><li><a href="/marten/documentation/events/appending">Appending Events</a></li><li><a href="/marten/documentation/events/snapshots">Aggregate Snapshots</a></li><li><a href="/marten/documentation/events/streams">Working with Event Streams</a></li><li><a href="/marten/documentation/events/projections">Projections</a><ul><li><a href="/marten/documentation/events/projections/javascript">Javascript Projections</a></li><li><a href="/marten/documentation/events/projections/dotnet">.Net Projections</a></li><li><a href="/marten/documentation/events/projections/querying">Querying Projections</a></li><li><a href="/marten/documentation/events/projections/async">Asynchronous Projections</a></li><li><a href="/marten/documentation/events/projections/live">Live Projections</a></li><li><a href="/marten/documentation/events/projections/inline">Inline Projections</a></li></ul></li></ul></li><li><a href="/marten/documentation/schema">Database Schema Objects</a></li></ul>
+<ul class="table-of-contents"><li><a href="/marten/documentation/schema">Marten and the Postgresql Schema</a></li><li><a href="/marten/documentation/documents">Marten as Document Db</a><ul><li><a href="/marten/documentation/documents/document_ids">Document Id&#39;s</a></li><li><a href="/marten/documentation/documents/json">Json Serialization</a></li><li><a href="/marten/documentation/documents/linq">Querying Documents with Linq</a></li><li><a href="/marten/documentation/documents/customizing_linq">Extending Marten&#39;s Linq Support</a></li><li><a href="/marten/documentation/documents/sql">Querying Documents with Postgresql SQL</a></li><li><a href="/marten/documentation/documents/saved_queries">Compiled Queries</a></li><li><a href="/marten/documentation/documents/persisting">Persisting Documents and Unit Of Work</a></li><li><a href="/marten/documentation/documents/partial_updates">Partial Document Updates</a></li><li><a href="/marten/documentation/documents/bulk_insert">Bulk Insert</a></li><li><a href="/marten/documentation/documents/identitymap">Identity Map Mechanics</a></li><li><a href="/marten/documentation/documents/loading">Loading Documents by Id</a></li><li><a href="/marten/documentation/documents/deleting">Deleting Documents</a></li><li><a href="/marten/documentation/documents/async">Asynchronous Operations</a></li><li><a href="/marten/documentation/documents/query_json">Query for Raw JSON</a></li><li><a href="/marten/documentation/documents/batched_queries">Batched Queries</a></li><li><a href="/marten/documentation/documents/versioning">Versioned Documents</a></li><li><a href="/marten/documentation/documents/diagnostics">Diagnostics and Instrumentation</a></li><li><a href="/marten/documentation/documents/customizing">Customizing Document Storage and Querying</a></li><li><a href="/marten/documentation/documents/text_search">Full Text Searching</a></li><li><a href="/marten/documentation/documents/cleaning">Tearing Down Document Storage</a></li><li><a href="/marten/documentation/documents/hierarchies">Document Hierarchies</a></li><li><a href="/marten/documentation/documents/projections">Document Projections</a></li><li><a href="/marten/documentation/documents/request-throttling">Request Counting and Throttling</a></li><li><a href="/marten/documentation/documents/table_storage">Table Storage</a></li></ul></li><li><a href="/marten/documentation/events">Marten as Event Store</a><ul><li><a href="/marten/documentation/events/configuration">Configuring Streams</a></li><li><a href="/marten/documentation/events/appending">Appending Events</a></li><li><a href="/marten/documentation/events/snapshots">Aggregate Snapshots</a></li><li><a href="/marten/documentation/events/streams">Working with Event Streams</a></li><li><a href="/marten/documentation/events/projections">Projections</a><ul><li><a href="/marten/documentation/events/projections/javascript">Javascript Projections</a></li><li><a href="/marten/documentation/events/projections/dotnet">.Net Projections</a></li><li><a href="/marten/documentation/events/projections/querying">Querying Projections</a></li><li><a href="/marten/documentation/events/projections/async">Asynchronous Projections</a></li><li><a href="/marten/documentation/events/projections/live">Live Projections</a></li><li><a href="/marten/documentation/events/projections/inline">Inline Projections</a></li></ul></li></ul></li><li><a href="/marten/documentation/precompiling">Precompiling Marten Code for Faster Initialization</a></li></ul>
 
 
 			      	</div>
@@ -105,7 +105,7 @@
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/documents">Marten as Document Db</a>
+				        	<strong>Next: </strong><a href="/marten/documentation/schema">Marten and the Postgresql Schema</a>
 
 				        </span>
 			      	</nav>
